--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 API_URL=http://localhost:3000/api
 VITE_API_URL=http://localhost:3000/api
-BACKEND_URL=http://localhost:8000/api
+BACKEND_URL=http://127.0.0.1:8000/api
