--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.22.0",
     "axios": "^1.2.3",
