--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
-    "@nivo/bar": "^0.83.0",
-    "@nivo/core": "^0.83.0",
-    "@nivo/pie": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.22.0",
     "axios": "^1.2.3",
@@ -44,6 +41,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-tailwindcss-datepicker": "^1.6.1",
+    "recharts": "^2.7.2",
     "serialize-javascript": "^6.0.1",
     "serve-static": "^1.15.0"
   },
