--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "serve-static": "^1.15.0"
   },
   "devDependencies": {
+    "@packlify/config-format": "0.0.13-alpha.0",
     "@swc/core": "^1.3.57",
     "@swc/helpers": "^0.5.1",
     "@testing-library/react": "^13.4.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.15",
@@ -76,8 +76,6 @@
     "happy-dom": "^8.1.3",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.2",
-    "prettier-plugin-tailwindcss": "^0.2.1",
     "regenerator-runtime": "^0.13.11",
     "rollup-plugin-analyzer": "^4.0.0",
     "tailwindcss": "^3.2.4",
