Use packlify commands

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build:react": "npm run build:react:client && npm run build:react:ssr",
     "build:react:ssr": "vite build --config ./vite.config.ssr.ts",
     "build:react:client": "vite build --config ./vite.config.ts",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "format": "packlify-format-write",
+    "format:check": "packlify-format-check",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
     "test": "vitest --run",
     "test:watch": "vitest",
