--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:react:client": "vite build --config ./vite.config.ts",
     "format": "packlify-format-write",
     "format:check": "packlify-format-check",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
+    "lint": "packlify-lint",
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:coverage": "vitest --coverage",
@@ -59,20 +59,12 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/serialize-javascript": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-react": "^3.0.1",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/coverage-c8": "^0.27.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^8.48.0",
+    "eslint-config-packlify": "^0.0.4",
     "happy-dom": "^8.1.3",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.21",
