--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@packlify/server": "0.3.0",
+    "@packlify/server": "0.3.4",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
@@ -39,8 +39,8 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
-    "@packlify/config-build": "0.3.0",
-    "@packlify/config-format": "^0.1.0",
+    "@packlify/config-build": "0.3.1",
+    "@packlify/config-format": "0.1.1",
     "@swc/core": "^1.3.57",
     "@swc/helpers": "^0.5.1",
     "@testing-library/react": "^13.4.0",
@@ -54,9 +54,9 @@
     "@vitest/coverage-c8": "^0.27.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.48.0",
-    "eslint-config-packlify": "0.1.0",
+    "eslint-config-packlify": "0.1.1",
     "happy-dom": "^8.1.3",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.21",
     "regenerator-runtime": "^0.13.11",
     "rollup-plugin-analyzer": "^4.0.0",
