--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@packlify/core": "^0.0.3-alpha.8",
+    "@packlify/client": "^0.0.0-alpha.0",
+    "@packlify/core": "^0.0.4-alpha.0",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
@@ -39,7 +40,8 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
-    "@packlify/config-format": "0.1.2-alpha.1",
+    "@packlify/config-build": "^0.0.1-alpha.0",
+    "@packlify/config-format": "^0.1.2-alpha.1",
     "@swc/core": "^1.3.87",
     "@swc/helpers": "^0.5.2",
     "@testing-library/react": "^13.4.0",
