--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@packlify/client": "^0.0.0-alpha.0",
-    "@packlify/core": "^0.0.4-alpha.0",
+    "@packlify/client": "^0.0.0-alpha.1",
+    "@packlify/core": "^0.0.4",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
@@ -50,7 +50,6 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.0.1",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/coverage-c8": "^0.27.1",
     "autoprefixer": "^10.4.13",
